# testagent

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.ollama.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  audit_log.py  mcp_token.py  setting.py  test.py  test_step.py  user.py
backend/app/routers/: __init__.py  admin.py  auth.py  dashboard.py  mcp.py  tests.py
backend/app/schemas/: __init__.py  auth.py  mcp.py  setting.py  test.py  user.py
backend/app/services/: __init__.py  audit_service.py  auth_service.py  email_service.py  settings_service.py  test_service.py
backend/app/utils/: __init__.py  encryption.py  mcp_server.py  url_validator.py
backend/app/workers/: celery_app.py  uat_task.py  ui_audit_task.py  ux_audit_task.py
frontend/: Dockerfile  next.config.ts  package.json  tailwind.config.ts
frontend/app/: layout.tsx  not-found.tsx  page.tsx  providers.tsx
frontend/app/admin/: layout.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/components/admin/: settings-api-keys.tsx  settings-appearance.tsx  settings-general.tsx  settings-logs.tsx  settings-mcp.tsx  settings-smtp.tsx  settings-users.tsx
frontend/lib/: api.ts  auth.ts  types.ts  utils.ts
frontend/styles/: globals.css
workers/node-worker/: Dockerfile  package.json  tsconfig.json
(+41 files in other folders)
