[project]
name = "testagent-backend"
version = "0.1.0"
description = "TestAgent — self-hosted AI-powered testing platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "celery[redis]>=5.4.0",
    "httpx>=0.28.0",
    "cryptography>=44.0.0",
    "python-multipart>=0.0.17",
    "redis>=5.2.0",
    "browser-use>=0.1.40",
    "python-dotenv>=1.0.1",
    "sse-starlette>=2.1.0",
    "mcp>=1.1.0",
    "aiofiles>=24.1.0",
    "bcrypt>=4.2.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
